changes in sidemenu and adjustments in other components

--- a/components/gallery/gallery-previewer/gallery-previewer.html
+++ b/components/gallery/gallery-previewer/gallery-previewer.html
@@ -1,10 +1,7 @@
 <section class="gallery-previewer">
     <div class="gallery-previewer-container">
         <div class="gallery-previewer-composition">
-            <img ng-repeat="image in $ctrl.images track by $index | limitTo: 3" style='background-image:url({{image}})'  alt="" class="gallery-previewer-example">
-            <!-- <img ng-repeat="image in $ctrl.images" ng-src="../../../assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example"> -->
-            <!-- <img src="./assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example">
-            <img src="../assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example"> -->
+            <img ng-repeat="image in $ctrl.images | limitTo:3 track by $index" style='background-image:url({{image}})'  alt="" class="gallery-previewer-example">
         </div>
     </div>
 </section>
