--- a/components/app-nav-bar/appNavBar.css
+++ b/components/app-nav-bar/appNavBar.css
@@ -4,7 +4,6 @@
     height: 8rem;
 }
 
-
 .nav_container {
     display: flex;
     justify-content: space-between;
@@ -12,13 +11,16 @@
     height: inherit;
 }
 
-.responsive_text {
-
-}
+.responsive_text {}
 
 .responsive_text h3 {
     font-size: 3.2rem;
     color: white;
+}
+
+.responsive_text span {
+    color: #1E90FF;
+    cursor: pointer;
 }
 
 .list {
@@ -30,16 +32,15 @@
     color: white;
     font-size: 2rem;
     padding: 1rem 2rem;
-} 
+}
 
-.list > li > a:link,
-.list > li > a:visited,
-.list > li > a:active  {
+.list>li>a:link,
+.list>li>a:visited,
+.list>li>a:active {
     color: #fafafa;
     text-decoration: none;
 }
 
-.list > li > a:hover {
+.list>li>a:hover {
     color: #1E90FF;
-    
 }
