--- a/components/gallery/gallery-sidemenu/gallery-sidemenu.html
+++ b/components/gallery/gallery-sidemenu/gallery-sidemenu.html
@@ -1,16 +1,20 @@
 <ng-include src="'assets/img/symbol-defs.svg'"></ng-include>
 <section class="gallery-sidemenu">
     <div class="gallery-sidemenu-link-container">
-            <svg ng-click="$ctrl.showPrevSections()" class="up-button"><use xlink:href="#icon-circle-up"></use></svg>
-        <ul class="gallery-sidemenu-link-list">
-            <li class="gallery-sidemenu-link-item" ng-repeat="section in $ctrl.sections track by $index">
-                <a ui-sref="section({section: section})" ng-mouseover="$ctrl.getImages({section:section})"
-                    class="gallery-sidemenu-link-a">{{section}}</a>
-            </li>
+        <svg ng-click="$ctrl.topDisabled ||$ctrl.showPrevSections()" ng-class="{'fadeSectionArrow' : $ctrl.topDisabled}" class="up-button">
+            <use xlink:href="#icon-arrow-up2"></use>
+        </svg>
 
+        <ul class="gallery-sidemenu-link-list">
+            <li class="gallery-sidemenu-link-item" ng-repeat="section in $ctrl.sections[$ctrl.currentSection] track by $index" ng-mouseover="$ctrl.getImages({section:section})"
+                ng-hide="!section">
+                <a ui-sref="section({section: section})" class="gallery-sidemenu-link-a">{{section}}</a>
+            </li>
         </ul>
-        
-            <svg ng-click="$ctrl.showNextSections()" class="down-button"><use xlink:href="#icon-circle-down"></use></svg>
-        
+
+        <svg ng-click="$ctrl.bottomDisabled || $ctrl.showNextSections()" ng-class="{'fadeSectionArrow' : $ctrl.bottomDisabled}" class="down-button">
+            <use xlink:href="#icon-arrow-down2"></use>
+        </svg>
+
     </div>
 </section>
