--- a/components/section/section.css
+++ b/components/section/section.css
@@ -9,7 +9,7 @@
 .carousel-main-image {
   width: 70%;
   position: relative;
-  margin: 0 auto ;
+  margin: 0 auto;
 }
 
 .carousel-section-message {
@@ -25,8 +25,8 @@
 .carousel-count {
   font-size: 2rem;
   position: absolute;
-  bottom:0;
-  right:0;
+  bottom: 0;
+  right: 0;
   color: #fafafa;
   padding: .6rem;
 }
@@ -50,7 +50,7 @@
 }
 
 .clipboard-copy-button {
-  color:#fafafa;
+  color: #fafafa;
   font-size: 2rem;
   padding: .6rem;
   cursor: pointer;
@@ -59,8 +59,9 @@
 .clipboard-copy-button:hover {
   text-decoration: underline;
 }
+
 .clipboard-success-message {
-  color:#fafafa;
+  color: #fafafa;
   font-size: 2rem;
   padding: .6rem;
 }
@@ -78,9 +79,12 @@
 .carousel-prev {
   color: #1E90FF;
   font-size: 10rem;
-  -webkit-user-select: none; /* Chrome/Safari */        
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+ */
+  -webkit-user-select: none;
+  /* Chrome/Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+ */
   transition: all .1s;
 }
 
@@ -89,9 +93,12 @@
   font-size: 10rem;
   transition: all .1s;
   margin-right: 0.4rem;
-  -webkit-user-select: none; /* Chrome/Safari */        
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+ */
+  -webkit-user-select: none;
+  /* Chrome/Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+ */
 }
 
 .carousel-prev:hover,
@@ -130,9 +137,10 @@
   display: flex;
 }
 
-.carousel-bottom-item-container:not(:first-child), .carousel-bottom-item-container:not(:nth-child(3n + 1)) {
+.carousel-bottom-item-container:not(:first-child),
+.carousel-bottom-item-container:not(:nth-child(3n + 1)) {
   flex: 0 0 33.33%;
-  margin: 0 0  0 0;
+  margin: 0 0 0 0;
   height: 16rem;
   border: 2px solid #ccc;
   opacity: .5;
@@ -142,13 +150,12 @@
   opacity: 1 !important;
 }
 
-
-
-.carousel-bottom-item-container:nth-child(3n){
+.carousel-bottom-item-container:nth-child(3n) {
   margin: 0 0 0 0;
 }
 
-.carousel-bottom-item-container:nth-child(3n + 1), .carousel-bottom-item-container:first-child {
+.carousel-bottom-item-container:nth-child(3n + 1),
+.carousel-bottom-item-container:first-child {
   flex: 0 0 33.33%;
   margin: 0 0 0 0;
   height: 16rem;
@@ -166,6 +173,7 @@
 
 .fadeArrow {
   color: grey !important;
+  cursor: none;
 }
 
 .carousel-bottom-item-container:hover {
