--- a/main.css
+++ b/main.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding:0;
     box-sizing: border-box;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 html {
@@ -18,4 +24,6 @@ html {
 body {
     position: relative;
     background-color: mintcream;
+    /* font-family: 'Crafty Girls', cursive; */
+    font-family: 'Kavivanar', cursive;
 }
