--- a/components/section/section.html
+++ b/components/section/section.html
@@ -11,8 +11,8 @@
 
         <!-- Arrows section -->
         <div class="carousel-actions-container">
-          <a class="carousel-prev" ng-click="$ctrl.showPrevImage()" ng-class="{'fadeArrow' : $ctrl.leftDisabled }">❮</a>
-          <a class="carousel-next" ng-click="$ctrl.showNextImage()" ng-class="{'fadeArrow' : $ctrl.rightDisabled }">❯</a>
+          <span class="carousel-prev" ng-click="$ctrl.showPrevImage()" ng-class="{'fadeArrow' : $ctrl.leftDisabled }">❮</span>
+          <span class="carousel-next" ng-click="$ctrl.showNextImage()" ng-class="{'fadeArrow' : $ctrl.rightDisabled }">❯</span>
         </div>
         <!-- Caption section  -->
         <div class="carousel-caption-container">
