--- a/components/section/section.css
+++ b/components/section/section.css
@@ -13,6 +13,7 @@
 }
 
 .carousel-section-message {
+  text-shadow: 1px 1px 7px #ccc;
   font-size: 5rem;
   text-align: center;
   text-transform: capitalize;
@@ -85,13 +86,13 @@
   /* Firefox */
   -ms-user-select: none;
   /* IE10+ */
-  transition: all .1s;
+  transition: all .4s;
 }
 
 .carousel-next {
   color: #1E90FF;
   font-size: 10rem;
-  transition: all .1s;
+  transition: all .4s;
   margin-right: 0.4rem;
   -webkit-user-select: none;
   /* Chrome/Safari */
@@ -105,6 +106,11 @@
 .carousel-next:hover {
   cursor: pointer;
   transform: scale(1.1);
+}
+
+.carousel-prev.fadeArrow:hover,
+.carousel-next.fadeArrow:hover {
+  cursor: unset;
 }
 
 .carousel-caption-container {
@@ -172,8 +178,9 @@
 }
 
 .fadeArrow {
-  color: grey !important;
-  cursor: none;
+  /* color: grey !important; */
+  opacity: 0;
+  cursor: unset;
 }
 
 .carousel-bottom-item-container:hover {
