--- a/components/app-nav-bar/appNavBar.html
+++ b/components/app-nav-bar/appNavBar.html
@@ -7,9 +7,9 @@
       <nav class="navigation_container">
         <ul class="list">
           <li><a ui-sref="home">HOME</a></li>
-          <li><a ui-sref="home">ABOUT US</a></li>
+          <!-- <li><a ui-sref="home">ABOUT US</a></li>
           <li><a ui-sref="home">SIGN IN</a></li>
-          <li><a ui-sref="home">SIGN UP</a></li>
+          <li><a ui-sref="home">SIGN UP</a></li> -->
         </ul>
       </nav>
     </div>
