--- a/components/section/section.html
+++ b/components/section/section.html
@@ -26,7 +26,7 @@
           <!-- Clipboard copying section -->
           <div class="clipboard-container">
             <p ng-if="!$ctrl.copiedSuccessfully" ng-click="$ctrl.copyToClipboard()" class="clipboard-copy-button">Copy image link</p>
-            <p ng-if="$ctrl.copiedSuccessfully" class="clipboard-success-message">Copying successful!</p>
+            <p ng-if="$ctrl.copiedSuccessfully" class="clipboard-success-message">Added to the clipboard!</p>
           </div>
         </div>
       </div>
