--- a/components/section/section.css
+++ b/components/section/section.css
@@ -7,7 +7,7 @@
 .carousel-container {}
 
 .carousel-main-image {
-  width: 70%;
+  width: 100%;
   position: relative;
   margin: 0 auto;
 }
@@ -33,7 +33,8 @@
 }
 
 .carousel-preview-image {
-  width: 90%;
+  width: 900px;
+  display: inline-block;
   border: .3rem solid #ccc;
   height: 68rem;
   background-repeat: no-repeat;
@@ -42,7 +43,7 @@
   background-color: #333;
   border-top-right-radius: .5rem;
   border-top-left-radius: .5rem;
-  margin: auto;
+  /* margin: auto; */
 }
 
 .clipboard-container {
@@ -118,7 +119,7 @@
   justify-content: center;
   align-items: center;
   height: 4rem;
-  width: 90%;
+  width: 900px;
   margin: auto;
   background-color: #333;
   border: 2px solid #ccc;
