--- a/components/section/section.html
+++ b/components/section/section.html
@@ -5,16 +5,13 @@
     <div class="carousel-container">
 
       <div class="carousel-main-image">
-        <!-- <h2 class="carousel-section-message">{{$ctrl.section}}</h2> -->
-        <!-- Main image -->
-        <!-- <div class="carousel-preview-image" ng-style="{'background-image':'url(' + $ctrl.images[$ctrl.imgToPreview] + ')'}"></div> -->
-        <div ng-style="{'margin-left': (0 - $ctrl.imgToPreview * 900) +502 + 'px', 'display':'inline-flex', 'width': ($ctrl.images.length) * 900 + 'px', 'transition': 'all .8s'}">
-          <div ng-repeat="img in $ctrl.images track by $index">
-            <div class="carousel-preview-image" ng-style="{'background-image':'url(' + img + ')'}">
-
+        <div>
+          <div class="carousel-main-container" ng-style="{'margin-left': (0 - $ctrl.imgToPreview * 1200) + ($ctrl.bodyWidth - 1200)/2  + 'px'}">
+            <div ng-repeat="img in $ctrl.images track by $index">
+              <div class="carousel-preview-image" ng-style="{'background-image':'url(' + img + ')', 'opacity': $ctrl.imgToPreview == $index ? '1' : '0'}">
+              </div>
             </div>
           </div>
-
         </div>
 
         <!-- Arrows section -->
