--- a/components/app-nav-bar/appNavBar.html
+++ b/components/app-nav-bar/appNavBar.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="nav_container">
       <div class="responsive_text">
-        <h3><span ui-sref="home">Responsive</span> gallery</h3>
+        <h3>
+          <span ui-sref="home">Animated</span> gallery</h3>
       </div>
       <nav class="navigation_container">
         <ul class="list">
-          <li><a ui-sref="home">HOME</a></li>
-          <!-- <li><a ui-sref="home">ABOUT US</a></li>
-          <li><a ui-sref="home">SIGN IN</a></li>
-          <li><a ui-sref="home">SIGN UP</a></li> -->
+          <li>
+            <a ui-sref="home">HOME</a>
+          </li>
         </ul>
       </nav>
     </div>
